Make header 50px, and give the main segment padding to ensure it doesn't overlap

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,6 +1,7 @@
 .site-header {
   position: fixed;
   width: 100%;
+  height: 50px;
   background-color: #4A9CDF;
   text-align: center;
   margin-bottom: 1rem;
@@ -30,4 +31,8 @@
  a {
   text-decoration: none;
   color: white;
+}
+
+main {
+  padding-top: 50px;
 }
